# ChangeLog for dev-python/paramiko
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.86 2013/02/24 18:09:04 ago Exp $

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for sh, wrt bug #452242

  21 Feb 2013; Zac Medico <zmedico@gentoo.org> paramiko-1.9.0-r1.ebuild:
  Add ~arm-linux keyword.

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for s390, wrt bug #452242

*paramiko-1.9.0-r1 (15 Feb 2013)

  15 Feb 2013; Michał Górny <mgorny@gentoo.org> +paramiko-1.9.0-r1.ebuild:
  Migrate to distutils-r1.

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for x86, wrt bug #452242

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for sparc, wrt bug #452242

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for ia64, wrt bug #452242

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for arm, wrt bug #452242

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for alpha, wrt bug #452242

  17 Jan 2013; Jeroen Roovers <jer@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for HPPA (bug #452242).

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for ppc64, wrt bug #452242

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for ppc, wrt bug #452242

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
  Stable for amd64, wrt bug #452242

*paramiko-1.9.0 (11 Nov 2012)

  11 Nov 2012; Tim Harder <radhermit@gentoo.org> +paramiko-1.9.0.ebuild:
  Version bump.

  06 Nov 2012; Mike Gilbert <floppym@gentoo.org> paramiko-1.7.7.2.ebuild:
  DEPEND on app-arch/unzip, bug 438072 by Christian.

*paramiko-1.7.7.2 (17 Aug 2012)

  17 Aug 2012; Patrick Lauer <patrick@gentoo.org> +paramiko-1.7.7.2.ebuild: