@@ -1,31 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
+DIST paramiko-1.10.0.tar.gz 822622 SHA256 51c579419403fd6694defa8b5e6d98bbabc310efec48836de859148a9c94c64c SHA512 edab3e062839c0130f767366a6545a706bec974aba2dc1e60b4ea0214c7094f090235d8cefa457be93015e334c7ccdbf056ee5773011df20e92cf9be67c82928 WHIRLPOOL 03f000aec2eb0c6bd207e59c7f9e4d84d55b76e4035c625196d824cd0d7607fb1e07f32cb978ebaf77d5e23739ea43c14d99dbd529c4f0a84e55efd7ccbc46c2
 DIST paramiko-1.7.6.tar.gz 843748 SHA256 3059263b016255640151cde1e3e74ffd7234b90e780628865cb3f5a407fd5002 SHA512 c6c70a48ee0d0f8f72a9459b856b57aef56e40a76b95aa8af1d53a569574e8955fbb475fc270473b47506a41786b0d0cbfb249a2383995a98bccb8473b66ee1d WHIRLPOOL 89c950741fd3e0e367079e0ea9768e6d115b83e0bdcc10fc4a0b938eec5ab2db92b9f183af058ff5a6a8d7a8196eaad6406fafd73cea9ada46babaeeb0a10fbc
 DIST paramiko-1.7.7.1.tar.gz 823017 SHA256 101e7642cbb59574539eaef537d0ef0bb54f1f987cc950f0ada0b050ac245eae SHA512 d67cfd037860c2c71dbad36c981ba314639d50a467397ca14f44eab784639ce44ea911aca96ef2c4fb9947618e486ca7f4e3f99048319a2c7d186bf0564711c7 WHIRLPOOL f1c640a0a1a2664b4c6c8847d2136fbd2825bf373df1881998da6b55cfc504f5e145539ff4cfaec1ee5581cb6c56c5699767d5bf514c95717f71178cd280b99e
 DIST paramiko-1.7.7.2.zip 1066799 SHA256 3d659073d6c61faae1756c8837159b6edc9b98da4b9d0e930212414b46c62599 SHA512 1aaa925fa80ec96ac55f70df6fdd898253622ceb953d31a2683f94731af2b6eb9bd6c2a10c0aee61fa2584428d5884ca6cce53d57d0bcd291e91569eabc861ee WHIRLPOOL bf9cdf3c26467f4d47e052d9c4160e0e368bc99a6b0c35f605eeb8ccd688382aa084cbf2424f1c7534cc173702b579d4287f1fd1ba286e7ec6083ae95066fab2
 DIST paramiko-1.9.0.tar.gz 814841 SHA256 cb99b74d9c53a23b92803c1c97fdb2bfdab7cd4fea888bd3b6438c127e3b29f5 SHA512 2f91b68b8a652aa773d14cded7a5f17cf6d758624f981c68510ee3b1302b64ee9290830440dca1a1000b7974ef9dca4f0acd13d01958433b6f35ae8a13e1c0a2 WHIRLPOOL 74e5a1e77086f05405b9c677978ef88bfb938c43d142e8758a58a5bffdbc67196327a0538c74db5e2472ee6e412b987efd457e908f5833472d108a7069ec7ba6
+EBUILD paramiko-1.10.0.ebuild 1109 SHA256 70c583dcd28c9cdf42054149f09578952c58d236e4a57d8ae1370fbb3ae2f011 SHA512 cd20054b23e05df38efcd33821c2145d03e3da6f11567ed6f0ff5c47ef5fea35d54ab9867eb801f8e5ecec56456b796e569b0378b5c91e00b382a8e427c1d1ae WHIRLPOOL f98b1936f06cf734fe060fea8fc0bad3941b9993d0fe789e9d9d2e53bc66113581e367fd64edd8479f59f52a617e721f4f3b412f861d27d6b38e66a4fe619f54
 EBUILD paramiko-1.7.6.ebuild 1102 SHA256 4bef48d111b732a7edcb025de8bc99e86d4677ca7bd9ef77535355b3c071f2b6 SHA512 48d2e9b2e3b2646855636fd493827b842a4101adf65afd4d1cceb217f14429d41ed5cbfc2807b5342e90e6ddf5a0bda3ca06dd7b48a5e8896b71bebe78dfcdc0 WHIRLPOOL adee92bf54cb66135f7743058a508fb062d9a655103bcb8131a9b4c26858a621cb40de45f9aee4413d86762846ae10b65998662544b11a57701c436487d8f5ac
 EBUILD paramiko-1.7.7.1.ebuild 1149 SHA256 a17d01f40c0687f2b4bd2b27d4f433d72a752a2d233cfc961862c4f8d29c6319 SHA512 dc9e6e32e9c1025ae6fc6d4d659d3e8d8778e32427143121ae413271268491d3519750d20caca9744289fa9650d8bdf4a3911928b759f4c6ca36ae54fdf26de2 WHIRLPOOL 0c8e9a31db944b52cd80975087b4e230e5750a5d5e71277794083615384ddb25c28155b1a6f13931d709c34dbb058609b1a2af1ec2d7807452b96776cac30d0a
 EBUILD paramiko-1.7.7.2.ebuild 1184 SHA256 5edfe0f123a8579001e6e6dafc6669f9934d3e9daa694d3a438e35f9952c03b8 SHA512 5e6f83fa27c3d501b5ffd8afa1cedc65c83a7209d13d8a02903fc01d4a166bd3fd08ccf042174548f18789294de126f6b87dd68fc3c61940adb00ce243ea7df4 WHIRLPOOL bf4359e90312af37ed8121628909ca736c757de9ce44e4a730f2b9c8f37d921ba609d18385b69d0b11bca713c59cb170c9118f8e748ccb4b4d3ee94ceea792f0
 EBUILD paramiko-1.9.0-r1.ebuild 1109 SHA256 1b7e807727677f5f9ee18361f18734917b8639f3b3884f48a8f896c4333bfce8 SHA512 d4e3e4ff0651c247e6e992b94b0c4066143993d376d17f0707c14c945cd6adf614b9c6e526474a8416715c98be10d324ea1a99dc1831c2b4598c4541ae32c67c WHIRLPOOL 42c4aa38c4adf4c38305148cb2dcc6259028c9b1a5aea5f42208ef6a70e67b1b88193a4c2c2e69be51640cf5f6882e2a33fc6ae5b55e3010193616e6f39544ba
 EBUILD paramiko-1.9.0.ebuild 1104 SHA256 2f9c7d1bf5d91d91ac2e7029554873f34bfe4bb871dfac671be641871a89d00d SHA512 2244e9cb2459a35febc88f9734ee28013617dd81975367d052e5b49f531a607831a389a6d820c8d5487a161627a57de04cb825db7db42fba3d4ae54348c8ae2f WHIRLPOOL b53e8b01ff49d0f1cf1d9e7fd756e359c81906ca60014b1dfe20e52a6c79000ef84f79eb4c1d0692c2d6e01ac2f9b0abdc0bad2cd6faa61ac245244405315d09
-MISC ChangeLog 10809 SHA256 65ca0c66ea514f9ee7ef7568d51e2ae3dc8430c10464037fc6e6c3ad38a7e10f SHA512 5f6f4bbbe34544e70f301357af0e2d6c36548c07db82dba208e30814f04a7e4c1731e34cd8d9d856e176bcbd8771a3767ae78c0e2d1dc860ddde5389e60e020b WHIRLPOOL a3474ef4276d67158272e92e656fe9e6517631d38a1c325a852c46aa687cb360c74e19f3cd3cd79285b99cd464db5329ce80b9c9f4558eba337f45ba0969eab1
+MISC ChangeLog 10938 SHA256 5e7e375c3527a4042527a5920c535bc0371a2c1d8cab58999b346dd76b0967c5 SHA512 509f0535b13d62769de6fbff2e3f112c35dc6c562c2aaa79d01817aa3181b9ca82fcac02292a03b6f59b032d1c698dd5e4f90c8982eb2388e5f54632fbb955f4 WHIRLPOOL 333b33fd8fd9b0d99bdd8f08d8fafb371694bc4e75b72d4d9166ac0dadf4475504e31b674f65fe4fb2e132378a599ff6bb2e06008959397cd34cdb75dda88754
 MISC metadata.xml 897 SHA256 2706e534ea7bc52cf5fbc3ce6ee4008ec371db4869a76edcbbbd78782b63fd17 SHA512 ebc24e6e46008d287661a9dc78f8f92942e9577e11e60d0a6266191d8d8674c512e9dca4aa40f8ed93c5f841f1eb667ebba35cb92bcfec2023a0feca60cc22d2 WHIRLPOOL 1c64852dcc4afcff56899d6a54448e58d0c5b2ed9ca24878b7407a7d071c3b9f4397af3b00d7037ae2069ef67d7a9ad5dcf46c7f5e8162db295affdefdbbbe12
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRKla7AAoJELp701BxlEWf7w4QAI6j4G6T297QoTKivgQUEkX7
-B++91o1f0Nj6B9KYhKpB2MMxXcxge1EpyIuKrT7RzJIGq+MQ8L3vyjXfKavi39lj
-zMaE/94ieXQp6zJZZatclYDPx6fUAJ1lEsPcICWYm2P0f5cONWodYZ5lnQHRBTrO
-4BLdx4WqN8q4K1sdBiO1bLpLm5eK21QtYllJHVXkOVwwQapLQ2z0HiwGPo9R/gNG
-j7qxIF8pry/TvZXKYaSvGMcfnXM2LPhqCg+9xzJNJ1Wq+tSZbrt6ifjPss9s3HWG
-tIrzrfbtlVHwUy3VrN7BjoriVL3Zf5KEM4oQZcsOg6UNN8s81XBOPjFYmPY6EAuY
-7Oxt/SdpqIKvgQbWFG8o8uW14r16R7p8E7mHg7VDNt/EtPK88MHwEwNq1m0+PPGJ
-MyD5Y+kvQRVxLiVFIBiTT8hc2pA5BHimgVrE1k2zuDRFfXfrJCHKW6g1v3pG6pFj
-zysMtUzBVPuAUpAcf1abX5v4FI9NjSzSjcr1nu2qFoTQsr2o7QV+VyslZumjjN8r
-iXH/asdapnLa9LbhbWN6p1q5+0a3nzLIeb42Z9UUaMrbjw/wt8f2ogDE7Nax4Qd9
-z8v+qAAe2bfYpzs4bbiHDUI6vVon5g1lTxYXMZSAFIIna0YjjYXHrCUIVShnXQpz
-z7FSO4kzJNch9oJCyFvS
-=TKIE
+iQEcBAEBCAAGBQJRMZofAAoJEEqz6FtPBkyjf1AIAIBAKoEGzK5o9CG/f+18+Igi
+Bwp5jPy+lRaaAmAaIKjsn24BMBE1jSTeSTnguu0s9gcAgMyJJhukhVxDNu6L8cA2
+PpSJK4hglB3QB2CMs0swNdlOxJCIdRGjcci5p8AmEg2gsrJPOWWnBjupCuOSLfSh
+JTGbT6TQKpbYvGjHEtiB0e8kktWXIGRnjvdlqHwKZ5Erko8smASLOJaAOSc8e7Oz
+Of6OcCSLHaHvshAMAazecdP93Yp/U68iCHnXlj2IJQjHMPAZHN1IZXKlW2UJTbkD
+xVfEullGRWQZH8hhsTTvkc/beoME6ptyO2ZIRGJuLsNALh1oVCbjHtMtMKiHPZM=
+=7Eb0
 -----END PGP SIGNATURE-----
