@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/paramiko
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.86 2013/02/24 18:09:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.87 2013/03/02 06:20:11 radhermit Exp $
+
+*paramiko-1.10.0 (02 Mar 2013)
+
+  02 Mar 2013; Tim Harder <radhermit@gentoo.org> +paramiko-1.10.0.ebuild:
+  Version bump.
 
   24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> paramiko-1.9.0.ebuild:
   Stable for sh, wrt bug #452242
